# mcp-sync-config

./: .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  mcpServers.json.example  mise.toml  pyproject.toml  pytest.ini
.claude/commands/: setup-python-uv.md
tests/: __init__.py  conftest.py  test_cli.py  test_edit_operations.py  test_json_operations.py  test_mcp_operations.py
tests/fixtures/: invalid.json  sample_claude_config.json  sample_mcp_servers.json
