[project]
name = "mcp-claude-config"
version = "0.1.0"
description = "Interactive CLI tool for managing Model Context Protocol (MCP) servers in Claude Desktop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.0.1",
]
authors = [
    {name = "Ygor Hora", email = "ygorhora@gmail.com"}
]
keywords = ["claude", "mcp", "cli", "configuration", "sync", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]

[project.urls]
"Homepage" = "https://github.com/ygorhora/mcp-claude-config"
"Bug Tracker" = "https://github.com/ygorhora/mcp-claude-config/issues"
"Documentation" = "https://github.com/ygorhora/mcp-claude-config#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-watch>=4.2.0",
    "responses>=0.23.3",
]
