[project]
name = "mcp-sync-config"
version = "0.1.0"
description = "Interactive CLI tool for managing Model Context Protocol (MCP) servers (currently only Claude Code)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.0.1",
]
authors = [
    {name = "Ygor Hora", email = "ygorhora@gmail.com"}
]
keywords = ["claude", "mcp", "cli", "configuration", "sync", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]

[project.urls]
"Homepage" = "https://github.com/ygorhora/mcp-sync-config"
"Bug Tracker" = "https://github.com/ygorhora/mcp-sync-config/issues"
"Documentation" = "https://github.com/ygorhora/mcp-sync-config#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-watch>=4.2.0",
    "responses>=0.23.3",
]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "PLR2004", "S101"]  # Allow unused arguments, magic values, and asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["mcp_sync_config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
